--- a/Lab_2_exp_tracking_local.ipynb
+++ b/Lab_2_exp_tracking_local.ipynb
@@ -2372,11 +2372,9 @@
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "# Convert to pandas DataFrame for easier manipulation\n",
     "iris_df = pd.DataFrame(iris.data, columns=iris.feature_names)\n",
     "iris_df['target'] = iris.target\n",
     "\n",
-    "# Summary statistics and visualizations\n",
     "print(iris_df.describe())\n",
     "sns.pairplot(iris_df, hue='target')\n",
     "plt.show()"
@@ -2406,23 +2404,17 @@
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.metrics import accuracy_score\n",
     "\n",
-    "# Start a new MLFlow run for the Logistic Regression model\n",
     "with mlflow.start_run():\n",
-    "    # Initialize the model\n",
     "    model_lr = LogisticRegression(max_iter=200)\n",
     "    \n",
-    "    # Train the model\n",
     "    model_lr.fit(X_train, y_train)\n",
     "    \n",
-    "    # Predictions and evaluation\n",
     "    y_pred = model_lr.predict(X_test)\n",
     "    accuracy = accuracy_score(y_test, y_pred)\n",
     "    \n",
-    "    # Log parameters, metrics, and model\n",
     "    mlflow.log_param(\"model\", \"Logistic Regression\")\n",
     "    mlflow.log_metric(\"accuracy\", accuracy)\n",
     "    \n",
-    "    # Log the model\n",
     "    mlflow.sklearn.log_model(model_lr, \"logistic_regression_model\")\n",
     "\n",
     "    print(f\"Logistic Regression Model Accuracy: {accuracy}\")"
@@ -2451,23 +2443,17 @@
    "source": [
     "from sklearn.tree import DecisionTreeClassifier\n",
     "\n",
-    "# Start a new MLFlow run for the Decision Tree model\n",
     "with mlflow.start_run():\n",
-    "    # Initialize the model\n",
     "    model_dt = DecisionTreeClassifier(max_depth=3)\n",
-    "    \n",
-    "    # Train the model\n",
+    "\n",
     "    model_dt.fit(X_train, y_train)\n",
     "    \n",
-    "    # Predictions and evaluation\n",
     "    y_pred = model_dt.predict(X_test)\n",
     "    accuracy = accuracy_score(y_test, y_pred)\n",
     "    \n",
-    "    # Log parameters, metrics, and model\n",
     "    mlflow.log_param(\"model\", \"Decision Tree\")\n",
     "    mlflow.log_metric(\"accuracy\", accuracy)\n",
     "    \n",
-    "    # Log the model\n",
     "    mlflow.sklearn.log_model(model_dt, \"decision_tree_model\")\n",
     "\n",
     "    print(f\"Decision Tree Model Accuracy: {accuracy}\")"
@@ -2496,23 +2482,18 @@
    "source": [
     "from sklearn.ensemble import RandomForestClassifier\n",
     "\n",
-    "# Start a new MLFlow run for the Random Forest model\n",
     "with mlflow.start_run():\n",
-    "    # Initialize the model\n",
     "    model_rf = RandomForestClassifier(n_estimators=100)\n",
     "    \n",
-    "    # Train the model\n",
     "    model_rf.fit(X_train, y_train)\n",
     "    \n",
-    "    # Predictions and evaluation\n",
     "    y_pred = model_rf.predict(X_test)\n",
     "    accuracy = accuracy_score(y_test, y_pred)\n",
     "    \n",
-    "    # Log parameters, metrics, and model\n",
     "    mlflow.log_param(\"model\", \"Random Forest\")\n",
     "    mlflow.log_metric(\"accuracy\", accuracy)\n",
     "    \n",
-    "    # Log the model\n",
+    "\n",
     "    mlflow.sklearn.log_model(model_rf, \"random_forest_model\")\n",
     "\n",
     "    print(f\"Random Forest Model Accuracy: {accuracy}\")"
@@ -2541,7 +2522,6 @@
    "source": [
     "from sklearn.model_selection import GridSearchCV\n",
     "\n",
-    "# Hyperparameter tuning for Decision Tree\n",
     "param_grid = {'max_depth': [3, 5, 7, 10]}\n",
     "grid_search = GridSearchCV(DecisionTreeClassifier(), param_grid, cv=5)\n",
     "\n",
@@ -2549,16 +2529,13 @@
     "    grid_search.fit(X_train, y_train)\n",
     "    best_model = grid_search.best_estimator_\n",
     "    \n",
-    "    # Predictions and evaluation\n",
     "    y_pred = best_model.predict(X_test)\n",
     "    accuracy = accuracy_score(y_test, y_pred)\n",
     "    \n",
-    "    # Log parameters, metrics, and model\n",
     "    mlflow.log_param(\"model\", \"Tuned Decision Tree\")\n",
     "    mlflow.log_param(\"best_max_depth\", grid_search.best_params_[\"max_depth\"])\n",
     "    mlflow.log_metric(\"accuracy\", accuracy)\n",
     "    \n",
-    "    # Log the model\n",
     "    mlflow.sklearn.log_model(best_model, \"tuned_decision_tree_model\")\n",
     "\n",
     "    print(f\"Tuned Decision Tree Model Accuracy: {accuracy}\")"
@@ -2578,14 +2555,12 @@
     }
    ],
    "source": [
-    "# Example of comparing models\n",
     "model_accuracies = {\n",
     "    \"Logistic Regression\": 0.9333333333333333,\n",
     "    \"Decision Tree\": 0.9333333333333333,\n",
     "    \"Random Forest\": 0.9555555555555556\n",
     "}\n",
     "\n",
-    "# Get the top 3 models\n",
     "top_models = sorted(model_accuracies.items(), key=lambda x: x[1], reverse=True)[:3]\n",
     "print(\"Top 3 Models:\", top_models)"
    ]
@@ -2611,18 +2586,14 @@
     }
    ],
    "source": [
-    "# Select the final model (e.g., Random Forest)\n",
-    "final_model = model_rf  # Replace with the best model\n",
+    "final_model = model_rf\n",
     "\n",
-    "# Stage the model in MLFlow\n",
     "with mlflow.start_run():\n",
     "    mlflow.sklearn.log_model(final_model, \"final_model\")\n",
-    "    \n",
-    "    # Test the final model\n",
+    "\n",
     "    y_pred = final_model.predict(X_test)\n",
     "    final_accuracy = accuracy_score(y_test, y_pred)\n",
     "    \n",
-    "    # Log final test set metric\n",
     "    mlflow.log_metric(\"final_test_accuracy\", final_accuracy)\n",
     "    \n",
     "    print(f\"Final Model Test Accuracy: {final_accuracy}\")"
